Add 5.11.0 performance numbers with jdk 11 and update the folder structure

--- a/benchmarks/5.11.0/jdk-8/5.11.0_single-node_4-core_jdk-8.md
+++ b/benchmarks/5.11.0/jdk-8/5.11.0_single-node_4-core_jdk-8.md
@@ -36,6 +36,8 @@ The following are the test parameters.
 | Heap Size | The amount of memory allocated to the application | 2G |
 | Concurrent Users | The number of users accessing the application at the same time. | 50, 100, 150, 300, 500 |
 | IS Instance Type | The AWS instance type used to run the Identity Server. | [**c5.xlarge**](https://aws.amazon.com/ec2/instance-types/) |
+| IS Instance Type | The AWS RDS instance type used to run the Identity Server. | [**db.m4.xlarge**](https://aws.amazon.com/rds/instance-types/) |
+| JDK version | The JDK version used to run the Identity Server. | jdk-8u212 |
 
 The following are the measurements collected from each performance test conducted for a given combination of
 test parameters.
@@ -58,107 +60,107 @@ The following is the summary of performance test results collected for the measu
 Select random super tenant users and authenticate through the RemoteUserStoreManagerService.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 1814.33 | 27.38 |
-|  100 | 1780.4 | 55.97 |
-|  150 | 1728.13 | 86.6 |
-|  300 | 1680.79 | 178.28 |
-|  500 | 1618.34 | 308.89 |
+|  50 | 1854.69 | 26.78 |
+|  100 | 1803.8 | 55.24 |
+|  150 | 1760.41 | 85.0 |
+|  300 | 1682.89 | 178.1 |
+|  500 | 1618.04 | 308.95 |
 
 **2. Auth Code Grant Redirect With Consent**
 
 Obtain an access token using the OAuth 2.0 authorization code grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 161.53 | 308.65 |
-|  100 | 177.2 | 563.31 |
-|  150 | 178.91 | 837.78 |
-|  300 | 174.87 | 1715.19 |
-|  500 | 176.14 | 2836.0 |
+|  50 | 155.36 | 320.91 |
+|  100 | 180.28 | 553.66 |
+|  150 | 183.21 | 818.09 |
+|  300 | 181.43 | 1653.3 |
+|  500 | 182.55 | 2736.81 |
 
 **3. Implicit Grant Redirect With Consent**
 
 Obtain an access token using the OAuth 2.0 implicit grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 252.61 | 197.27 |
-|  100 | 281.52 | 354.55 |
-|  150 | 292.19 | 512.88 |
-|  300 | 278.84 | 1075.76 |
-|  500 | 279.78 | 1786.12 |
+|  50 | 252.94 | 196.99 |
+|  100 | 291.93 | 341.86 |
+|  150 | 297.99 | 502.86 |
+|  300 | 282.84 | 1060.48 |
+|  500 | 296.68 | 1684.87 |
 
 **4. Password Grant Type**
 
 Obtain an access token using the OAuth 2.0 password grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 1420.59 | 35.03 |
-|  100 | 1443.31 | 69.11 |
-|  150 | 1418.62 | 105.55 |
-|  300 | 1009.39 | 297.14 |
-|  500 | 1301.89 | 384.06 |
+|  50 | 1422.25 | 34.99 |
+|  100 | 1445.14 | 69.02 |
+|  150 | 1428.56 | 104.81 |
+|  300 | 1342.81 | 223.27 |
+|  500 | 1346.03 | 371.43 |
 
 **5. Client Credentials Grant Type**
 
 Obtain an access token using the OAuth 2.0 client credential grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 6880.12 | 7.08 |
-|  100 | 6880.98 | 14.33 |
-|  150 | 7229.84 | 20.53 |
-|  300 | 7085.55 | 42.08 |
-|  500 | 6770.34 | 73.54 |
+|  50 | 7271.12 | 6.65 |
+|  100 | 7014.36 | 13.99 |
+|  150 | 7304.77 | 20.34 |
+|  300 | 7165.18 | 41.56 |
+|  500 | 7053.27 | 70.49 |
 
 **6. OIDC Auth Code Grant Redirect With Consent**
 
 Obtain an access token and an id token using the OAuth 2.0 authorization code grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 152.5 | 327.0 |
-|  100 | 177.2 | 563.37 |
-|  150 | 184.47 | 812.57 |
-|  300 | 182.01 | 1647.68 |
-|  500 | 182.75 | 2733.63 |
+|  50 | 150.36 | 331.63 |
+|  100 | 178.97 | 557.78 |
+|  150 | 182.11 | 823.11 |
+|  300 | 180.63 | 1660.29 |
+|  500 | 180.25 | 2771.24 |
 
 **7. OIDC Implicit Grant Redirect With Consent**
 
 Obtain an access token and an id token using the OAuth 2.0 implicit grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 197.59 | 252.39 |
-|  100 | 219.41 | 455.13 |
-|  150 | 224.97 | 666.39 |
-|  300 | 220.02 | 1362.92 |
-|  500 | 219.66 | 2274.53 |
+|  50 | 197.39 | 252.61 |
+|  100 | 222.16 | 449.5 |
+|  150 | 229.81 | 652.41 |
+|  300 | 224.84 | 1333.82 |
+|  500 | 226.86 | 2201.93 |
 
 **8. OIDC Password Grant Type**
 
 Obtain an access token and an id token using the OAuth 2.0 password grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 616.23 | 80.97 |
-|  100 | 618.7 | 161.44 |
-|  150 | 561.17 | 267.22 |
-|  300 | 579.84 | 517.15 |
-|  500 | 573.59 | 870.76 |
+|  50 | 610.13 | 81.77 |
+|  100 | 600.01 | 166.45 |
+|  150 | 601.53 | 249.29 |
+|  300 | 582.81 | 514.51 |
+|  500 | 592.85 | 842.19 |
 
 **9. OIDC Auth Code Request Path Authenticator With Consent**
 
 Obtain an access token and an id token using the request path authenticator.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 157.69 | 316.56 |
-|  100 | 199.59 | 500.91 |
-|  150 | 203.97 | 735.26 |
-|  300 | 202.41 | 1481.05 |
-|  500 | 201.78 | 2472.96 |
+|  50 | 160.43 | 311.13 |
+|  100 | 190.71 | 524.19 |
+|  150 | 203.48 | 737.03 |
+|  300 | 188.46 | 1590.17 |
+|  500 | 190.97 | 2613.14 |
 
 **10. SAML2 SSO Redirect Binding**
 
 Obtain a SAML 2 assertion response using redirect binding.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 199.25 | 249.81 |
-|  100 | 206.59 | 482.96 |
-|  150 | 214.94 | 696.45 |
-|  300 | 218.6 | 1370.12 |
-|  500 | 200.31 | 2490.91 |
+|  50 | 208.37 | 238.79 |
+|  100 | 215.12 | 463.9 |
+|  150 | 221.52 | 676.02 |
+|  300 | 218.98 | 1367.85 |
+|  500 | 206.51 | 2414.51 |
