--- a/benchmarks/5.11.0/jdk-11/5.11.0_two-node_2-core_jdk11.md
+++ b/benchmarks/5.11.0/jdk-11/5.11.0_two-node_2-core_jdk11.md
@@ -35,7 +35,9 @@ The following are the test parameters.
 | Scenario Name | The name of the test scenario. | Refer to the above table. |
 | Heap Size | The amount of memory allocated to the application | 2G |
 | Concurrent Users | The number of users accessing the application at the same time. | 50, 100, 150, 300, 500 |
-| IS Instance Type | The AWS instance type used to run the Identity Server. | [**c5.xlarge**](https://aws.amazon.com/ec2/instance-types/) |
+| IS Instance Type | The AWS instance type used to run the Identity Server. | [**c5.large**](https://aws.amazon.com/ec2/instance-types/) |
+| IS Instance Type | The AWS RDS instance type used to run the Identity Server. | [**db.m4.2xlarge**](https://aws.amazon.com/rds/instance-types/) |
+| JDK version | The JDK version used to run the Identity Server. | JDK 11.0.15.1  |
 
 The following are the measurements collected from each performance test conducted for a given combination of
 test parameters.
@@ -58,107 +60,107 @@ The following is the summary of performance test results collected for the measu
 Select random super tenant users and authenticate through the RemoteUserStoreManagerService.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 1787.25 | 27.79 |
-|  100 | 1809.8 | 55.06 |
-|  150 | 1765.59 | 84.76 |
-|  300 | 1769.97 | 169.32 |
-|  500 | 1745.29 | 286.3 |
+|  50 | 518.88 | 96.22 |
+|  100 | 486.24 | 205.54 |
+|  150 | 416.43 | 359.82 |
+|  300 | 447.25 | 669.18 |
+|  500 | 459.5 | 1084.09 |
 
 **2. Auth Code Grant Redirect With Consent**
 
 Obtain an access token using the OAuth 2.0 authorization code grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 167.03 | 298.42 |
-|  100 | 184.36 | 541.39 |
-|  150 | 180.7 | 829.4 |
-|  300 | 175.02 | 1713.77 |
-|  500 | 170.19 | 2935.86 |
+|  50 | 75.26 | 661.67 |
+|  100 | 71.11 | 1403.15 |
+|  150 | 78.38 | 1908.4 |
+|  300 | 39.5 | 7552.91 |
+|  500 | 76.28 | 6534.64 |
 
 **3. Implicit Grant Redirect With Consent**
 
 Obtain an access token using the OAuth 2.0 implicit grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 264.83 | 188.1 |
-|  100 | 305.62 | 326.43 |
-|  150 | 326.83 | 458.25 |
-|  300 | 320.5 | 935.54 |
-|  500 | 307.41 | 1626.01 |
+|  50 | 69.25 | 720.26 |
+|  100 | 95.26 | 1046.44 |
+|  150 | 100.14 | 1494.23 |
+|  300 | 104.63 | 2858.34 |
+|  500 | 108.88 | 4574.07 |
 
 **4. Password Grant Type**
 
 Obtain an access token using the OAuth 2.0 password grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 1444.86 | 34.41 |
-|  100 | 1482.67 | 67.24 |
-|  150 | 1465.25 | 102.15 |
-|  300 | 1432.7 | 209.24 |
-|  500 | 1392.47 | 358.89 |
+|  50 | 561.68 | 88.58 |
+|  100 | 492.49 | 202.69 |
+|  150 | 531.75 | 281.61 |
+|  300 | 537.88 | 556.42 |
+|  500 | 503.01 | 990.44 |
 
 **5. Client Credentials Grant Type**
 
 Obtain an access token using the OAuth 2.0 client credential grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 5467.1 | 8.95 |
-|  100 | 5863.24 | 16.83 |
-|  150 | 6115.26 | 24.28 |
-|  300 | 6319.69 | 47.17 |
-|  500 | 6405.64 | 77.7 |
+|  50 | 976.18 | 50.8 |
+|  100 | 1005.32 | 98.98 |
+|  150 | 928.37 | 161.04 |
+|  300 | 894.94 | 334.43 |
+|  500 | 942.38 | 528.72 |
 
 **6. OIDC Auth Code Grant Redirect With Consent**
 
 Obtain an access token and an id token using the OAuth 2.0 authorization code grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 155.38 | 320.85 |
-|  100 | 182.81 | 545.97 |
-|  150 | 182.28 | 822.22 |
-|  300 | 173.95 | 1724.38 |
-|  500 | 170.7 | 2926.12 |
+|  50 | 81.87 | 608.1 |
+|  100 | 83.73 | 1191.56 |
+|  150 | 80.31 | 1863.62 |
+|  300 | 74.55 | 4011.27 |
+|  500 | 64.04 | 7758.87 |
 
 **7. OIDC Implicit Grant Redirect With Consent**
 
 Obtain an access token and an id token using the OAuth 2.0 implicit grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 180.28 | 276.69 |
-|  100 | 185.48 | 538.63 |
-|  150 | 191.57 | 782.78 |
-|  300 | 183.72 | 1632.33 |
-|  500 | 184.94 | 2700.34 |
+|  50 | 98.84 | 503.81 |
+|  100 | 91.22 | 1093.61 |
+|  150 | 94.19 | 1588.53 |
+|  300 | 84.2 | 3549.76 |
+|  500 | 86.41 | 5751.23 |
 
 **8. OIDC Password Grant Type**
 
 Obtain an access token and an id token using the OAuth 2.0 password grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 756.64 | 65.91 |
-|  100 | 767.99 | 130.02 |
-|  150 | 757.85 | 197.75 |
-|  300 | 741.56 | 404.54 |
-|  500 | 708.97 | 704.84 |
+|  50 | 363.59 | 137.13 |
+|  100 | 365.11 | 273.44 |
+|  150 | 341.46 | 438.02 |
+|  300 | 334.17 | 894.75 |
+|  500 | 352.3 | 1408.66 |
 
 **9. OIDC Auth Code Request Path Authenticator With Consent**
 
 Obtain an access token and an id token using the request path authenticator.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 156.49 | 319.06 |
-|  100 | 190.86 | 523.77 |
-|  150 | 189.76 | 790.34 |
-|  300 | 182.6 | 1641.6 |
-|  500 | 176.45 | 2828.36 |
+|  50 | 102.68 | 485.34 |
+|  100 | 101.71 | 980.94 |
+|  150 | 95.42 | 1568.03 |
+|  300 | 94.0 | 3181.91 |
+|  500 | 94.93 | 5234.84 |
 
 **10. SAML2 SSO Redirect Binding**
 
 Obtain a SAML 2 assertion response using redirect binding.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 230.5 | 215.69 |
-|  100 | 263.03 | 379.07 |
-|  150 | 287.47 | 520.63 |
-|  300 | 320.31 | 934.44 |
-|  500 | 317.12 | 1574.46 |
+|  50 | 133.89 | 371.99 |
+|  100 | 127.34 | 782.98 |
+|  150 | 127.52 | 1171.57 |
+|  300 | 122.39 | 2436.05 |
+|  500 | 106.3 | 4660.25 |
