--- a/benchmarks/5.11.0/jdk-8/5.11.0_two-nodes_4-core_jdk-8.md
+++ b/benchmarks/5.11.0/jdk-8/5.11.0_two-nodes_4-core_jdk-8.md
@@ -36,6 +36,8 @@ The following are the test parameters.
 | Heap Size | The amount of memory allocated to the application | 2G |
 | Concurrent Users | The number of users accessing the application at the same time. | 50, 100, 150, 300, 500 |
 | IS Instance Type | The AWS instance type used to run the Identity Server. | [**c5.xlarge**](https://aws.amazon.com/ec2/instance-types/) |
+| IS Instance Type | The AWS RDS instance type used to run the Identity Server. | [**db.m4.xlarge**](https://aws.amazon.com/rds/instance-types/) |
+| JDK version | The JDK version used to run the Identity Server. | jdk-8u212 |
 
 The following are the measurements collected from each performance test conducted for a given combination of
 test parameters.
@@ -58,107 +60,107 @@ The following is the summary of performance test results collected for the measu
 Select random super tenant users and authenticate through the RemoteUserStoreManagerService.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 1854.69 | 26.78 |
-|  100 | 1803.8 | 55.24 |
-|  150 | 1760.41 | 85.0 |
-|  300 | 1682.89 | 178.1 |
-|  500 | 1618.04 | 308.95 |
+|  50 | 1787.25 | 27.79 |
+|  100 | 1809.8 | 55.06 |
+|  150 | 1765.59 | 84.76 |
+|  300 | 1769.97 | 169.32 |
+|  500 | 1745.29 | 286.3 |
 
 **2. Auth Code Grant Redirect With Consent**
 
 Obtain an access token using the OAuth 2.0 authorization code grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 155.36 | 320.91 |
-|  100 | 180.28 | 553.66 |
-|  150 | 183.21 | 818.09 |
-|  300 | 181.43 | 1653.3 |
-|  500 | 182.55 | 2736.81 |
+|  50 | 167.03 | 298.42 |
+|  100 | 184.36 | 541.39 |
+|  150 | 180.7 | 829.4 |
+|  300 | 175.02 | 1713.77 |
+|  500 | 170.19 | 2935.86 |
 
 **3. Implicit Grant Redirect With Consent**
 
 Obtain an access token using the OAuth 2.0 implicit grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 252.94 | 196.99 |
-|  100 | 291.93 | 341.86 |
-|  150 | 297.99 | 502.86 |
-|  300 | 282.84 | 1060.48 |
-|  500 | 296.68 | 1684.87 |
+|  50 | 264.83 | 188.1 |
+|  100 | 305.62 | 326.43 |
+|  150 | 326.83 | 458.25 |
+|  300 | 320.5 | 935.54 |
+|  500 | 307.41 | 1626.01 |
 
 **4. Password Grant Type**
 
 Obtain an access token using the OAuth 2.0 password grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 1422.25 | 34.99 |
-|  100 | 1445.14 | 69.02 |
-|  150 | 1428.56 | 104.81 |
-|  300 | 1342.81 | 223.27 |
-|  500 | 1346.03 | 371.43 |
+|  50 | 1444.86 | 34.41 |
+|  100 | 1482.67 | 67.24 |
+|  150 | 1465.25 | 102.15 |
+|  300 | 1432.7 | 209.24 |
+|  500 | 1392.47 | 358.89 |
 
 **5. Client Credentials Grant Type**
 
 Obtain an access token using the OAuth 2.0 client credential grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 7271.12 | 6.65 |
-|  100 | 7014.36 | 13.99 |
-|  150 | 7304.77 | 20.34 |
-|  300 | 7165.18 | 41.56 |
-|  500 | 7053.27 | 70.49 |
+|  50 | 5467.1 | 8.95 |
+|  100 | 5863.24 | 16.83 |
+|  150 | 6115.26 | 24.28 |
+|  300 | 6319.69 | 47.17 |
+|  500 | 6405.64 | 77.7 |
 
 **6. OIDC Auth Code Grant Redirect With Consent**
 
 Obtain an access token and an id token using the OAuth 2.0 authorization code grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 150.36 | 331.63 |
-|  100 | 178.97 | 557.78 |
-|  150 | 182.11 | 823.11 |
-|  300 | 180.63 | 1660.29 |
-|  500 | 180.25 | 2771.24 |
+|  50 | 155.38 | 320.85 |
+|  100 | 182.81 | 545.97 |
+|  150 | 182.28 | 822.22 |
+|  300 | 173.95 | 1724.38 |
+|  500 | 170.7 | 2926.12 |
 
 **7. OIDC Implicit Grant Redirect With Consent**
 
 Obtain an access token and an id token using the OAuth 2.0 implicit grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 197.39 | 252.61 |
-|  100 | 222.16 | 449.5 |
-|  150 | 229.81 | 652.41 |
-|  300 | 224.84 | 1333.82 |
-|  500 | 226.86 | 2201.93 |
+|  50 | 180.28 | 276.69 |
+|  100 | 185.48 | 538.63 |
+|  150 | 191.57 | 782.78 |
+|  300 | 183.72 | 1632.33 |
+|  500 | 184.94 | 2700.34 |
 
 **8. OIDC Password Grant Type**
 
 Obtain an access token and an id token using the OAuth 2.0 password grant type.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 610.13 | 81.77 |
-|  100 | 600.01 | 166.45 |
-|  150 | 601.53 | 249.29 |
-|  300 | 582.81 | 514.51 |
-|  500 | 592.85 | 842.19 |
+|  50 | 756.64 | 65.91 |
+|  100 | 767.99 | 130.02 |
+|  150 | 757.85 | 197.75 |
+|  300 | 741.56 | 404.54 |
+|  500 | 708.97 | 704.84 |
 
 **9. OIDC Auth Code Request Path Authenticator With Consent**
 
 Obtain an access token and an id token using the request path authenticator.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 160.43 | 311.13 |
-|  100 | 190.71 | 524.19 |
-|  150 | 203.48 | 737.03 |
-|  300 | 188.46 | 1590.17 |
-|  500 | 190.97 | 2613.14 |
+|  50 | 156.49 | 319.06 |
+|  100 | 190.86 | 523.77 |
+|  150 | 189.76 | 790.34 |
+|  300 | 182.6 | 1641.6 |
+|  500 | 176.45 | 2828.36 |
 
 **10. SAML2 SSO Redirect Binding**
 
 Obtain a SAML 2 assertion response using redirect binding.
 |  Concurrent Users | Throughput (Requests/sec) | Average Response Time (ms) |
 |---|---:|---:|
-|  50 | 208.37 | 238.79 |
-|  100 | 215.12 | 463.9 |
-|  150 | 221.52 | 676.02 |
-|  300 | 218.98 | 1367.85 |
-|  500 | 206.51 | 2414.51 |
+|  50 | 230.5 | 215.69 |
+|  100 | 263.03 | 379.07 |
+|  150 | 287.47 | 520.63 |
+|  300 | 320.31 | 934.44 |
+|  500 | 317.12 | 1574.46 |
